--- a/estudo/css-estudo/style01.css
+++ b/estudo/css-estudo/style01.css
@@ -9,6 +9,17 @@ table{
     border-collapse: collapse;
     
 }
+caption{
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px;
+    background-color: lightgray;
+
+}
+
+
+
+
  thead, tfoot{
     background-color: darkgrey;
     color: black;
