--- a/estudo/css-estudo/estudo01.css
+++ b/estudo/css-estudo/estudo01.css
@@ -1,4 +1,12 @@
 @charset  "UTF3";
-body{
-    font-family: Arial, Helvetica, sans-serif;
+
+table{
+    width: 300px;
+    border-collapse: collapse;
+}
+
+td{
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
 }
