--- a/estudo/css-estudo/estudo01.css
+++ b/estudo/css-estudo/estudo01.css
@@ -1,12 +1,27 @@
 @charset  "UTF3";
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 table{
-    width: 300px;
+    width: 400px;
     border-collapse: collapse;
 }
 
-td{
+caption{
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 10px;
+}
+td,th{
     border: 1px solid black;
     padding: 10px;
-    text-align: center;
+}
+
+thead{
+    background-color: aqua;
+}
+tbody th{
+    background-color: blue;
 }
