--- a/estudo/css-estudo/tabela05.css
+++ b/estudo/css-estudo/tabela05.css
@@ -10,6 +10,15 @@
     font-weight: bolder;
     padding: 10px;
   }
+
+  /* reponsividada da tabela, ela foi colocada em uma div */
+div#container{
+  /* faz caber o conteúdo dentro de um espaço com barra de rolagem */
+  overflow-x: auto;
+
+}
+
+
   th,td{
     border: 1px solid black;
     padding: 10px;
