--- a/estudo/css-estudo/estudo01.css
+++ b/estudo/css-estudo/estudo01.css
@@ -5,23 +5,25 @@ body{
 }
 
 table{
-    width: 400px;
     border-collapse: collapse;
+    width: 900px;
 }
 
 caption{
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
+    font-variant: small-caps;
+    background-color: rgba(223, 168, 96, 0.986);
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+th,td{
+    border: 1px, solid black;
     padding: 10px;
 }
-td,th{
-    border: 1px solid black;
-    padding: 10px;
+tr.media{
+    text-align: left;
+    font-weight: bold;
+    background-color: burlywood;
 }
 
-thead{
-    background-color: aqua;
-}
-tbody th{
-    background-color: blue;
-}
