--- a/estudo/css-estudo/estudo01.css
+++ b/estudo/css-estudo/estudo01.css
@@ -6,24 +6,46 @@ body{
 
 table{
     border-collapse: collapse;
-    width: 900px;
+    width: 500px;
+    padding: 20px;
+    position: relative;
 }
 
 caption{
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: bold;
+    color: white;
     font-variant: small-caps;
-    background-color: rgba(223, 168, 96, 0.986);
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-}
-th,td{
-    border: 1px, solid black;
     padding: 10px;
-}
-tr.media{
-    text-align: left;
-    font-weight: bold;
-    background-color: burlywood;
+    background-color: gray;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
+
+
+thead >tr >th{
+    font-size: 1.2rem;
+    color: white;
+    text-align: left;
+
+    background-color: rgb(128, 128, 128);
+    position: sticky;
+    top: -1px;
+}
+th,td{
+    border: 1px solid black;
+    padding: 10px;
+}
+td.numero{
+    text-align: right;
+
+}
+tbody tr:nth-child(odd){
+    background-color: rgba(169, 169, 169, 0.452);
+}
+tfoot tr{
+    background-color: gray;
+    text-align: left;
+    font-weight: bold;
+}
