--- a/pasta_mae/css/estudo01.css
+++ b/pasta_mae/css/estudo01.css
@@ -130,12 +130,42 @@ main img.pequena{
    display: block;
    margin: auto;
 }
+main div{
+   background-image:linear-gradient(to top, var(--cor1), var(--cor3));
+   padding: 20px;
+   margin: 10px -1px 30px -1px;
+   position: relative;
+   padding-bottom: 50%;
+   
+}
+ main iframe{
+   position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+ }
+ main strong{
+   color: var(--cor1);
+   font-weight: bold;
+ }
+main a{
+   text-decoration: none;
+   background-color: var(--cor11);
+   padding: 2px;
+   border-radius: 4px;
+   color:white;
 
+}
+main a:hover{
+   background-color: var(--cor1);
 
+}
 
+main a.externo::after{
+   content:'\00a0➤';
 
-
-
+}
 
  footer{
     background-image:linear-gradient(to top, var(--cor1), var(--cor4));
