--- a/pasta_mae/css/estudo01.css
+++ b/pasta_mae/css/estudo01.css
@@ -37,8 +37,10 @@
    padding: 0px;
 }
 html,body{
-   background-color:var(--cor5) ;
+   background-color:var(--cor7) ;
+   font-family: var(--fonte4);
 }
+
 header{
 background-image: linear-gradient(to top,var(--cor1), var(--cor11));
    min-height: 150px;
@@ -76,6 +78,10 @@ header p{
    color: white;
    padding: 10px;
    text-decoration: none;
+   margin: 10px;
+   background-color:var(--cor11);
+   padding: 5px;
+   box-sizing: border-box;
    /* transition: 0.4s; */
    
  }
@@ -83,8 +89,8 @@ header p{
    background-color: var(--cor6);
    border-radius: 5px;
    font-weight: bolder;
-   transition: 0.4s;
-   padding: 5px 10px;
+   transition: 0.4s; 
+   
    font-family: var(--fonte4);
    
  }
@@ -98,13 +104,113 @@ header p{
    margin-bottom: 30px;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
+   box-shadow: 1px 1px 1px  2px rgba(0, 0, 0, 0.027);
  }
 
 main h1{
    font-family: var(--fonte3);
-   color: var(--cor1);
+   color: var(--cor2);
+   letter-spacing: 2px;
    padding-top: 20px;
 }
 main p{
    margin: 15px 0px;
+   line-height: 2.4rem;
+   text-indent: 50px;
+}
+main h2{
+   font-family: var(--fonte3);
+   padding: 5px;
+   border-radius: 5px;
+   text-indent: 10px;
+   color: var(--cor2);
+   font-weight: normal;
+   letter-spacing: 2px;
+   font-size: 1.3rem;
+   background-image: linear-gradient(to right, var(--cor4), transparent);
+}
+main img{
+   width: 100%;
+   border-radius: 5px;
+
+}
+main .pequena{
+   max-width: 350px;
+}
+main div{
+   background-color: var(--cor6);
+   padding: 20px;
+   margin: 10px -1px 30px -1px;
+   position: relative;
+   padding-bottom: 50%;
+   border-radius: 4px;
+}
+ main iframe{
+   position: absolute;
+   top: 5%;
+   left: 5%;
+   width: 90%;
+   height: 90%;
+ }
+
+main strong{
+   color: var(--cor3);
+}
+
+
+a{
+   background-color: var(--cor10);
+   border-radius: 5px;
+   padding: 5px;
+   text-decoration: none;
+}
+a:hover{
+   background-color: var(--cor1);
+   color: white;
+
+}
+a.externo::after{
+   content: '\00a0 ➤';
+
+}
+aside{
+   background-color: var(--cor6);
+   border-radius: 10px;
+   margin-top: 10px;
+   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.24);
+}
+aside h3{
+   color: white;
+   background-image: linear-gradient(to top,var(--cor1), var(--cor2));
+   padding: 20px;
+   margin: -1px -1px 0px -1px;
+   border-radius:10px 10px 0px 0px ;
+   font-size: 1.2rem;
+}
+aside p{
+   padding: 10px;
+
+}
+aside ul{
+   list-style-position: inside;
+   list-style-type: '☑︎\00a0';
+   padding: 10px;
+   /* color: white; */
+}
+
+
+footer{
+   background-image: linear-gradient(to top,var(--cor1), var(--cor2));
+   color: white;
+   padding: 20px;
+   text-align: center;
+}
+footer a{
+   color: white;
+   background-color: var(--cor1);
+}
+footer a:hover{
+   background-color: var(--cor11);
+
+
 }
