--- a/media-query02/css/geral.css
+++ b/media-query02/css/geral.css
@@ -9,7 +9,9 @@
 html,body{
     width: 100vw;
     height: 100vh;
-    background-color: rgba(3, 3, 70, 0.603);
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 h1{
     color: white;
