--- a/media-query02/css/retrato.css
+++ b/media-query02/css/retrato.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 /* Aparelho em pé(portrait) */
 body{
-    background-color: green;
+    /* testando */
+    /* background-color: green; */
+
+     background-image: url('../imagens/cev-portrait.jpg'); 
+     background-position: center bottom;
+    
 }
